# time-bandit

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: main.rs  store.rs  tui.rs
src/tui/: mod.rs  stateful_list.rs  timer.rs  tui.rs
src/types/: types.rs
store/: Cargo.toml
store/src/: lib.rs  types.rs
web-client/: README.md  package-lock.json  package.json  tailwind.config.ts
web-client/src/app/: globals.css  layout.tsx  page.tsx
web-client/src/app/components/: TimeChart.tsx
web-client/src/app/details/[slug]/: page.tsx
web-client/src/components/: TaskCard.tsx  TaskStartModal.tsx
