[package]
name = "time_bandit"
version = "0.1.11"
edition = "2021"
description = "A command line time management application"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
crossterm = "0.26.1"
rusqlite = "0.29.0"
prettytable-rs = "^0.10"
dirs = "5.0"
