[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = {version ="1",  features = ["full"] }
store = { path = "../store" }
dirs = "5.0"
hyper = "0.14.27"
tower = "0.4.13"
tower-http = {version = "0.4.4", features =["cors", "trace"]}
http = "0.2.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.16"
