[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = {version ="1",  features = ["full"] }
